fixed button text alignment prob
+ Fixed a problem where by --buttonAlign the text of the button didn't align properly.

--- a/css/skelet.css
+++ b/css/skelet.css
@@ -551,24 +551,24 @@ kbd {
 button,.button,[type="button"],[type="submit"],[type="reset"] {
     padding: var(--buttonPadding);
     margin: var(--buttonMargin);
+    height: var(--buttonHeight, fit-content);
+    width: var(--buttonWidth);
     border-radius: var(--buttonRadius);
     border: var(--buttonBorderWidth) var(--buttonBorderStyle) var(--buttonBorderColor);
     box-shadow: var(--buttonShadow);
     background: var(--buttonBg);
     font-size: var(--buttonFontSize);
     font-weight: var(--buttonFontWeight);
+    letter-spacing: var(--buttonSpacing, .03em);
+    line-height: var(--buttonLineHeight, 1);
     color: var(--buttonColor);
     text-align: var(--buttonAlign, center);
-    height: var(--buttonHeight, fit-content);
-    width: var(--buttonWidth);
-    letter-spacing: .03em;
     white-space: nowrap;
-    line-height: 1;
     font-style: inherit;
     text-decoration: none;
     position: relative;
     display: inline-flex;
-    justify-content: center;
+    justify-content: var(--buttonAlign, center);
     align-items: center;
     vertical-align: middle;
     cursor: pointer;
